--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+@layer components {
+  .btn {
+    @apply font-bold py-2 px-4 rounded bg-blue-700 text-white w-64;
+  }
+  .btn:hover {
+    @apply bg-blue-900;
+  }
+}
